add new features

--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,11 @@
 <body>
       <header id="masthead">  
           <a href="index.html" id="logo">Peggy Ekwalla</a>
+          <a href="" id="logo">Resume</a>
         <ul class="nav justify-content-end">
             <li class="nav-item">
               <a class="nav-link" href="index.html">About</a>
+              
             </li>
             <li class="nav-item">
               <a class="nav-link" href="portfolio.html">Portfolio</a>
