--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
   <header id="masthead">
      
   <a href="index.html" id="logo">Peggy Ekwalla</a>
+  
   <ul class="nav justify-content-end">
      <li class="nav-item">
       <a class="nav-link" href="index.html">About</a>
+      <a class="nav-link" href="assets/images/Peggy_ekwalla_resume.pdf">Resume</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="portfolio.html">Portfolio</a>
