--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
 <body>
     <header id="masthead"> 
       <a href="index.html" id="logo">Peggy Ekwalla</a>
+      <a href="" id="logo">Resume</a>
       <ul class="nav justify-content-end">
           <li class="nav-item">
             <a class="nav-link" href="index.html">About</a>
