--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,11 @@
 <body>
       <header id="masthead">  
           <a href="index.html" id="logo">Peggy Ekwalla</a>
-          <a href="" id="logo">Resume</a>
+         
         <ul class="nav justify-content-end">
             <li class="nav-item">
               <a class="nav-link" href="index.html">About</a>
+              <a class="nav-link" href="assets/images/Peggy_ekwalla_resume.pdf">Resume</a>
               
             </li>
             <li class="nav-item">
