update new file

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="col-md-8">
           <div class="card-body">
              <p class="card-text">i'm Peggy, a full-stack web developer with a passion for learning. After enjoying my exposure to coding, I decided to pursue the education necessary to be a professional developer.
-              I hold a bachelor Degree in Computer Sciences from ITI. I've been  working at UPS as a Sr. System Analyst for over 11 years. I hold a Project Management Certificate. I enjoy cooking and running. I love to travel worldwide and shop.</p>
+              I hold a bachelor Degree in Computer Sciences from ITI, Douala Cameroon. I've been  working at UPS as a Sr. System Analyst for over 11 years. I hold a Project Management Certificate. I enjoy cooking and running. I love to travel worldwide and shop.</p>
           </div>
         </div>
       </div>
